# RdmModels

./: .gitignore  README.md  pyproject.toml
src/rdm_models/: __init__.py  dummy.py
src/rdm_models/core/: __init__.py  consts.py  wehi_person.py
src/rdm_models/merscope/: __init__.py  consts.py  experiment.py  types.py
tests/: test_merscope.py  test_merscope_experiment.py  test_user.py  test_user_model.py  test_wehi_person.py
tests/fixtures/: merscope_experiment.json
